Diffed files and bugfixed. Initial post-4.1.3-merge fixes.

--- a/themes/phoenix/templates/RecordTab/description.phtml
+++ b/themes/phoenix/templates/RecordTab/description.phtml
@@ -2,8 +2,15 @@
     // Set page title.
     $this->headTitle($this->translate('Description') . ': ' . $this->driver->getBreadcrumb());
 
+    $formatter = $this->recordDataFormatter();
+    $mainFields = $formatter->getData($driver, $formatter->getDefaults('description'));
 ?>
 <table class="table table-striped" summary="<?=$this->transEsc('Description')?>">
-  <? // Use custom solrMarcPhoenix driver - brad?>
-  <? $this->MarcFields()->returnMarcData($pos='details');?>
+  <? if (!empty($mainFields)): ?>
+    <? foreach ($mainFields as $key => $current): ?>
+      <tr><th><?=$this->transEsc($key)?>:</th><td><?=$current['value']?></td></tr>
+    <? endforeach; ?>
+  <? else: ?>
+    <tr><td><?=$this->transEsc('no_description')?></td></tr>
+  <? endif; ?>
 </table>
