--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -534,14 +534,11 @@ search.)
 }
 
 /*Footer*/
-footer .container {
+footer.container {
+    color: #fff;
     background:@brand-primary-dark;
     padding-top:@grid-gutter-width / 1.5; 
     padding-bottom:@grid-gutter-width / 1.5;
-}
-
-footer hr {
-    display:none;
 }
 
 footer a,
