--- a/themes/phoenix/templates/RecordDriver/SolrDefault/list-entry.phtml
+++ b/themes/phoenix/templates/RecordDriver/SolrDefault/list-entry.phtml
@@ -117,18 +117,18 @@
               <? endif; ?>
             </div>
 
-            <? if (!$openUrlActive && empty($urls) && $this->driver->supportsAjaxStatus()): ?>
+            <? if (!isset($openUrlActive) && empty($urls) && $this->driver->supportsAjaxStatus()): ?>
               <span class="status ajax-availability hidden"><?=$this->transEsc('Loading')?>...</span>
             <? endif; ?>
 
-            <? /* We need to find out if we're supposed to display an OpenURL link ($openUrlActive),
-                  but even if we don't plan to display the link, we still want to get the $openUrl
-                  value for use in generating a COinS (Z3988) tag -- see bottom of file.
-                */
-              $openUrl = $this->openUrl($this->driver, 'results');
-              $openUrlActive = $openUrl->isActive();
-              // Account for replace_other_urls setting
-              $urls = $this->record($this->driver)->getLinkDetails($openUrlActive);
+          <? /* We need to find out if we're supposed to display an OpenURL link ($openUrlActive),
+                but even if we don't plan to display the link, we still want to get the $openUrl
+                value for use in generating a COinS (Z3988) tag -- see bottom of file.
+              */
+            $openUrl = $this->openUrl($this->driver, 'results');
+            $openUrlActive = $openUrl->isActive();
+            // Account for replace_other_urls setting
+            $urls = $this->record($this->driver)->getLinkDetails($openUrlActive);
 
               if ($openUrlActive || !empty($urls)):
             ?>
