--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -127,11 +127,11 @@
 </h2>
 
 <? /* Loop over textual (summary) holdings and separate them for later use */?>
+<? $otherTextualHoldings = []; ?>
+<? $unboundIssues = []; ?>
+<? $unboundSupplements = []; ?>
+<? $holdingsNotes = []; ?>
 <? if (isset($holding['textfields'])): ?>
-  <? $unboundIssues = []; ?>
-  <? $unboundSupplements = []; ?>
-  <? $holdingsNotes = []; ?>
-  <? $otherTextualHoldings = []; ?>
     <? foreach ($holding['textfields'] as $textFieldName => $textFields): ?>
       <? $isUnboundIssues = $textFieldName == 'unbound issues'; ?>
       <? $isUnboundSupplements = $textFieldName == 'unbound supplements'; ?>
@@ -149,15 +149,25 @@
 <? endif; ?>
 
 <? /* Variables for checking the status of Library Has*/?>
-<? $flatLibHas = call_user_func_array('array_merge', $otherTextualHoldings['issues']); ?>
-<? $libHasCount = count($flatLibHas); ?>
-<? $emptyLibHas = empty(trim($flatLibHas[0])); ?>
+<? $flatLibHas = [] ?>
+<? $libHasCount = 0 ?>
+<? $emptyLibHas = true ?>
+<? if (isset($otherTextualHoldings['issues'])): ?>
+  <? $flatLibHas = call_user_func_array('array_merge', $otherTextualHoldings['issues']); ?>
+  <? $libHasCount = count($flatLibHas); ?>
+  <? $emptyLibHas = empty(trim($flatLibHas[0])); ?>
+<? endif; ?>
 <? $doesNotHaveLibraryhas = ($libHasCount <= 1 && $emptyLibHas); ?>
 
 <? /* Variables for checking the status of holdings notes*/?>
-<? $flatHoldingsNotes = call_user_func_array('array_merge', $holdingsNotes['textfields']); ?>
-<? $holdingNotesCount = count($flatHoldingsNotes); ?>
-<? $emptyHoldingNotes = empty(trim($flatHoldingsNotes[0])); ?>
+<? $flatHoldingsNotes = [] ?>
+<? $holdingNotesCount = 0 ?>
+<? $emptyHoldingNotes = true ?>
+<? if (isset($otherTextualHoldings['textfields'])): ?>
+  <? $flatHoldingsNotes = call_user_func_array('array_merge', $holdingsNotes['textfields']); ?>
+  <? $holdingNotesCount = count($flatHoldingsNotes); ?>
+  <? $emptyHoldingNotes = empty(trim($flatHoldingsNotes[0])); ?>
+<? endif; ?>
 <? $noHoldingsNotes = ($holdingNotesCount <= 1 && $emptyHoldingNotes); ?>
 
 <?/*Get the first barcode to pass to the map links*/ ?>
