--- a/themes/phoenix/templates/RecordTab/toc.phtml
+++ b/themes/phoenix/templates/RecordTab/toc.phtml
@@ -13,7 +13,7 @@
 <? if (!empty($toc)): ?>
   <strong><?=$this->transEsc('Table of Contents')?>: </strong>
   <ul class="toc">
-    <? foreach ($toc as $line): ?>
+    <? foreach ($toc['Syndetics'][0]['Content'] as $line): ?>
       <li><?=$this->escapeHtml($line)?></li>
     <? endforeach; ?>
   </ul>
