--- a/themes/phoenix/templates/alphabrowse/home.phtml
+++ b/themes/phoenix/templates/alphabrowse/home.phtml
@@ -3,9 +3,20 @@
   //$this->layout()->breadcrumbs = '<a href="' . $this->url('alphabrowse-home') . '">' . $this->transEsc('Browse Alphabetically') . '</a>';
   $baseQuery = ['source' => $this->source, 'from' => $this->from];
 
+  // Set up upper search box if necessary:
+  if ($this->searchbox()->alphaBrowseOptionsEnabled()) {
+    $this->layout()->searchbox = $this->context($this)->renderInContext(
+        'search/searchbox.phtml',
+        [
+          'lookfor' => $this->from,
+          'searchIndex' => 'AlphaBrowse:' . $this->source,
+        ]
+    );
+  }
+
   // If coming from a "consult the series record" link, 
   // send the user directly to the first record and bypass the browse.
-  if ($_GET['consult']) {
+  if (isset($_GET['consult'])) {
     $seriesRecordUrl = $this->alphabrowse()->getUrl($this->source, $this->result['Browse']['items'][0]);
     header("Location: $seriesRecordUrl");
     exit();
@@ -29,6 +40,22 @@
   </ul>
 <? $pageLinks = ob_get_contents(); ?>
 <? ob_end_clean(); ?>
+
+<? /* If the top search box is not configured to show alphabrowse, or if no option
+      is selected yet, set up a separate form: */ ?>
+<? //if (!$this->searchbox()->alphaBrowseOptionsEnabled() || empty($this->source)): ?>
+  <!--<form class="form-inline" method="get" action="<?//=$this->url('alphabrowse-home')?>" name="alphaBrowseForm" id="alphaBrowseForm">
+    <label for="alphaBrowseForm_source"><?//=$this->transEsc('Browse Alphabetically') ?></label>
+    <select id="alphaBrowseForm_source" name="source" class="form-control">
+      <? //foreach ($this->alphaBrowseTypes as $key => $item): ?>
+        <option value="<?//=$this->escapeHtmlAttr($key) ?>"<? //if($this->source == $key): ?> selected="selected"<? //endif; ?>><?//=$this->transEsc($item) ?></option>
+      <? //endforeach; ?>
+    </select>
+    <label for="alphaBrowseForm_from"><?//=$this->transEsc('starting from') ?></label>
+    <input type="text" name="from" id="alphaBrowseForm_from" value="<?//=$this->escapeHtmlAttr($this->from) ?>" class="form-control"/>
+    <input class="btn btn-primary" type="submit" value="<?//=$this->transEsc('Browse') ?>"/>
+  </form>-->
+<? //endif; ?>
 
 <? if ($this->result): ?>
   <div class="row">
@@ -129,7 +156,7 @@
 
           <td class="titles">
             <? if ($item['count'] > 0): ?>
-               <a href="<?=$this->escapeHtmlAttr($this->url('search-results', [], ['query' => $query]))?>"><?=$item['count']; ?></a>
+              <?=$item['count']; ?>
             <? endif; ?>
           </td>
         </tr>
