--- a/themes/phoenix/templates/myresearch/holds.phtml
+++ b/themes/phoenix/templates/myresearch/holds.phtml
@@ -1,9 +1,9 @@
 <?
-    // Set up page title:
-    $this->headTitle($this->translate('Requested Items'));
+  // Set up page title:
+  $this->headTitle($this->translate('Requested Items'));
 
-    // Set up breadcrumbs:
-    $this->layout()->breadcrumbs = '<li><a href="' . $this->url('myresearch-home') . '">' . $this->transEsc('Your Account') . '</a></li> <li class="active">' . $this->transEsc('My Holds') . '</li>';
+  // Set up breadcrumbs:
+  $this->layout()->breadcrumbs = '<li><a href="' . $this->url('myresearch-home') . '">' . $this->transEsc('Your Account') . '</a></li> <li class="active">' . $this->transEsc('My Holds') . '</li>';
 ?>
 <div class="row">
   <div class="<?=$this->layoutClass('mainbody')?>">
@@ -38,48 +38,67 @@
         </div>
         <input type="hidden" id="submitType" name="cancelSelected" value="1"/>
 
-      <? $iteration = 0; ?>
-      <? foreach ($this->recordList as $resource): ?>
-        <hr/>
-        <? $iteration++; ?>
-        <? $ilsDetails = $resource->getExtraDetail('ils_details'); ?>
-        <div id="record<?=$this->escapeHtmlAttr($resource->getUniqueId()) ?>" class="row result">
-            <? $safeId = preg_replace('/[^a-zA-Z0-9]/', '', $resource->getUniqueId()); ?>
-            <div class="col-xs-1">
-              <input class="checkbox-select-item" type="checkbox" name="SelectedIDS[]" id="checkbox_<?=$safeId?>" data-record-id="<?=$this->escapeHtmlAttr($resource->getSourceIdentifier() . '|' . $resource->getUniqueId());?>" />
+    <? $iteration = 0; ?>
+    <? foreach ($this->recordList as $resource): ?>
+      <? $iteration++; ?>
+      <? $ilsDetails = $resource->getExtraDetail('ils_details'); ?>
+      <div id="record<?=$this->escapeHtmlAttr($resource->getUniqueId()) ?>" class="result">
+        <? if ($this->cancelForm && isset($ilsDetails['cancel_details'])): ?>
+          <? $safeId = preg_replace('/[^a-zA-Z0-9]/', '', $resource->getUniqueId()); ?>
+          <input type="hidden" name="cancelAllIDS[]" value="<?=$this->escapeHtmlAttr($ilsDetails['cancel_details']) ?>" />
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="cancelSelectedIDS[]" value="<?=$this->escapeHtmlAttr($ilsDetails['cancel_details']) ?>" id="checkbox_<?=$safeId?>" data-record-id="<?=$this->escapeHtmlAttr($resource->getSourceIdentifier() . '|' . $resource->getUniqueId());?>" />
+            </label>
+          </div>
+        <? endif; ?>
+
+        <?
+          $coverDetails = $this->record($resource)->getCoverDetails('holds', 'small', $this->recordLink()->getUrl($resource));
+          $cover = $coverDetails['html'];
+          $thumbnail = false;
+          $thumbnailAlignment = $this->record($resource)->getThumbnailAlignment('account');
+          if ($cover):
+            ob_start(); ?>
+            <div class="media-<?=$thumbnailAlignment ?> <?=$this->escapeHtmlAttr($coverDetails['size'])?>">
+              <?=$cover ?>
             </div>
-            <div class="col-sm-2 hidden-xs text-center">
-              <? $cover = $this->record($resource)->getCover('holds', 'medium'); ?>
-              <? if ($cover): ?>
-                <?=$cover?>
-              <? endif; ?>
-            </div>
-            <div class="col-sm-5 col-xs-12">
-              <?
-                // If this is a non-missing Solr record, we should display a link:
-                if (is_a($resource, 'VuFind\\RecordDriver\\SolrDefault') && !is_a($resource, 'VuFind\\RecordDriver\\Missing')) {
-                  $title = $resource->getTitle();
-                  $title = empty($title) ? $this->transEsc('Title not available') : $this->escapeHtml($title);
-                  echo '<a href="' . $this->recordLink()->getUrl($resource)
-                    . '" class="title">' . $title . '</a>';
-                } else if (isset($ilsDetails['title']) && !empty($ilsDetails['title'])){
-                  // If the record is not available in Solr, perhaps the ILS driver sent us a title we can show...
-                  echo $this->escapeHtml($ilsDetails['title']);
-                } else {
-                  // Last resort -- indicate that no title could be found.
-                  echo $this->transEsc('Title not available');
-                }
-              ?><br/> 
-  
-              <? if (isset($ilsDetails['publication_year']) && !empty($ilsDetails['publication_year'])): ?>
-                <strong><?=$this->transEsc('Year of Publication')?>:</strong> <?=$this->escapeHtml($ilsDetails['publication_year'])?>
-                <br />
-              <? endif; ?>
-  
-              <? $listAuthors = $resource->getPrimaryAuthors(); if (!empty($listAuthors)): ?>
-                <?=$this->transEsc('by')?>:
-                <a href="<?=$this->record($resource)->getLink('author', $listAuthors[0])?>"><?=$this->escapeHtml($listAuthors[0])?></a><? if (count($listAuthors) > 1): ?>, <?=$this->transEsc('more_authors_abbrev')?><? endif; ?><br/>
-              <? endif; ?>
+            <? $thumbnail = ob_get_contents(); ?>
+          <? ob_end_clean(); ?>
+        <? endif; ?>
+        <div class="media">
+          <? if ($thumbnail && $thumbnailAlignment == 'left'): ?>
+            <?=$thumbnail ?>
+          <? endif ?>
+          <div class="media-body">
+            <?
+              // If this is a non-missing Solr record, we should display a link:
+              if (is_a($resource, 'VuFind\\RecordDriver\\SolrDefault') && !is_a($resource, 'VuFind\\RecordDriver\\Missing')) {
+                $title = $resource->getTitle();
+                $title = empty($title) ? $this->transEsc('Title not available') : $this->escapeHtml($title);
+                echo '<a href="' . $this->recordLink()->getUrl($resource)
+                  . '" class="title">' . $title . '</a>';
+              } else if (isset($ilsDetails['title']) && !empty($ilsDetails['title'])){
+                // If the record is not available in Solr, perhaps the ILS driver sent us a title we can show...
+                echo '<span class="title">' . $this->escapeHtml($ilsDetails['title']) . '</span>';
+              } else {
+                // Last resort -- indicate that no title could be found.
+                echo $this->transEsc('Title not available');
+              }
+            ?><br/>
+            <? $listAuthors = $resource->getPrimaryAuthors(); if (!empty($listAuthors)): ?>
+              <?=$this->transEsc('by')?>:
+              <a href="<?=$this->record($resource)->getLink('author', $listAuthors[0])?>"><?=$this->escapeHtml($listAuthors[0])?></a><? if (count($listAuthors) > 1): ?>, <?=$this->transEsc('more_authors_abbrev')?><? endif; ?><br/>
+            <? endif; ?>
+
+            <? if (count($resource->getFormats()) > 0): ?>
+              <?=$this->record($resource)->getFormatList() ?>
+              <br/>
+            <? endif; ?>
+            <? if (isset($ilsDetails['volume']) && !empty($ilsDetails['volume'])): ?>
+              <strong><?=$this->transEsc('Volume')?>:</strong> <?=$this->escapeHtml($ilsDetails['volume'])?>
+              <br />
+            <? endif; ?>
 
             <? if (!empty($ilsDetails['shelvingLocation'])): ?>
               <?=$this->escapeHtml($ilsDetails['shelvingLocation'])?>
@@ -143,15 +162,20 @@
               <br />
             <? endif; ?>
           </div>
+          <? if ($thumbnail && $thumbnailAlignment == 'right'): ?>
+            <?=$thumbnail ?>
+          <? endif ?>
         </div>
-      <? endforeach; ?>
-      </form>
-    <? else: ?>
-      <?=$this->transEsc('You have no outstanding requests') ?>.
-    <? endif; ?>
-  </div>
+        <?=$resource->tryMethod('supportsCoinsOpenUrl')?'<span class="Z3988" title="'.$this->escapeHtmlAttr($resource->getCoinsOpenUrl()).'"></span>':''?>
+      </div>
+    <? endforeach; ?>
+    <? if ($this->cancelForm): ?></form><? endif; ?>
+  <? else: ?>
+    <?=$this->transEsc('You have no outstanding requests') ?>.
+  <? endif; ?>
+</div>
 
-  <div class="<?=$this->layoutClass('sidebar')?>">
-    <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'holds'])?>
-  </div>
+<div class="<?=$this->layoutClass('sidebar')?>">
+  <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'holds'])?>
+</div>
 </div>
