--- a/themes/phoenix/templates/record/view.phtml
+++ b/themes/phoenix/templates/record/view.phtml
@@ -100,7 +100,7 @@
 
         <div class="tab-content" id="record-tabs">
           <? if (!$this->loadInitialTabWithAjax || !isset($activeTabObj) || !$activeTabObj->supportsAjax()): ?>
-            <div class="tab-pane active <?=$this->activeTab ?>-tab">
+            <div class="tab-pane active <?=$this->escapeHtmlAttr($this->activeTab) ?>-tab">
               <?=isset($activeTabObj) ? $this->record($this->driver)->getTab($activeTabObj) : '' ?>
             </div>
           <? endif; ?>
