--- a/themes/phoenix/templates/Helpers/MarcFields/382.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/382.phtml
@@ -33,5 +33,5 @@ if (!empty($data['subfieldData'])) {
 ?>   
 
 <? if (!empty($data['vernacularData'])) :
-       echo implode(' ', $data['vernacularData']);?><br />
+       echo htmlentities(implode(' ', $data['vernacularData']));?><br />
 <? endif; ?>   
