--- a/themes/phoenix/templates/Helpers/MarcFields/785.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/785.phtml
@@ -28,10 +28,10 @@
               $subLabel = '<span class="subLabel">Changed back to</span> ';
           }
   
-          echo $subLabel . ' '. implode(' ', $data['subfieldData']) ?><br/>
+          echo $subLabel . ' '. htmlentities(implode(' ', $data['subfieldData'])) ?><br/>
 
           <? if (!empty($data['vernacularData'])) :
-                 echo implode(' ', $data['vernacularData']);?><br />
+                 echo htmlentities(implode(' ', $data['vernacularData']));?><br />
           <? endif; ?>
 
   
