--- a/themes/phoenix/templates/Helpers/MarcFields/resultsAuthor.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/resultsAuthor.phtml
@@ -6,6 +6,6 @@
 
        <?=$this->view->transEsc('by')?> <a href="<?='/vufind/alphabrowse'.'/Home?source=author&amp;from='.urlencode(strip_tags(trim($link, ' ')))?>" class="<?=$data['label']?>"><?=$displayUrl ?></a><br/>
        <? if (!empty($data['vernacularData'])) :
-           echo implode(' ', $data['vernacularData']);?><br />
+           echo htmlentities(implode(' ', $data['vernacularData']));?><br />
        <? endif; ?>
 <? endif; ?>
