--- a/themes/phoenix/templates/Helpers/MarcFields/565.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/565.phtml
@@ -9,8 +9,8 @@
        $subLabel = null;
    }
   
-   echo $subLabel . ' '. implode(' ', $data['subfieldData']) ?><br/>
+   echo $subLabel . ' '. htmlentities(implode(' ', $data['subfieldData'])) ?><br/>
 
    <? if (!empty($data['vernacularData'])) :
-          echo implode(' ', $data['vernacularData']);?><br />
+          echo htmlentities(implode(' ', $data['vernacularData']));?><br />
    <? endif; ?>
