--- a/themes/phoenix/templates/Helpers/MarcFields/default.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/default.phtml
@@ -1,7 +1,7 @@
 <!--default.phtml-->
 <? if (!empty($data['subfieldData'])) : 
-       echo strip_tags(implode(' ', $data['subfieldData'])) ?><br/>
+       echo strip_tags(htmlentities(implode(' ', $data['subfieldData']))) ?><br/>
 <? endif; ?>   
 <? if (!empty($data['vernacularData'])) :
-       echo strip_tags(implode(' ', $data['vernacularData']));?><br />
+       echo strip_tags(htmlentities(implode(' ', $data['vernacularData'])));?><br />
 <? endif; ?>   
