--- a/themes/phoenix/templates/Helpers/MarcFields/topics.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/topics.phtml
@@ -3,5 +3,5 @@
     <?=$this->topicFormatter($data, $link=0)?>
 <br/></a>
 <? if (!empty($data['vernacularData'])) :
-       echo implode(' ', $data['vernacularData']);?><br />
+       echo htmlentities(implode(' ', $data['vernacularData']));?><br />
 <? endif; ?>
